Fix issue with bottom of menu not being visible when it is fully expanded.

--- a/sampler-app/Resources/Files/unp_2funplugged.css
+++ b/sampler-app/Resources/Files/unp_2funplugged.css
@@ -289,7 +289,7 @@ div.dBar .content {
 
 .offcanvas,.offcanvas-list {
 	width: 300px !important;
-
+	padding-bottom: 60px !important;
 }
 
 .bootcards-container.active-left {
